removed usage of React.addons.createFragment for readability, and fixes warning in console

--- a/src/styles/ComponentViewer.sass
+++ b/src/styles/ComponentViewer.sass
@@ -12,6 +12,10 @@
 }
 .elemAttrs {
   padding-left: 25px;
+
+  li {
+    list-style: none;
+  }
 }
 .controlLinks a, .addComponent a, .addElement a {
   color: blue;
